--- a/GraduationDesignSystem/.settings/org.eclipse.core.resources.prefs
+++ b/GraduationDesignSystem/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//test/HibernateDaoImpTest/StudentDaoImpTest.java=UTF-8
+encoding//test/HibernateDaoImpTest/TeacherDaoImplTest.java=UTF-8
 encoding//test/ServiceImpTest/StudentManagetImpTest.java=UTF-8
