--- a/GraduationDesignSystem/WebContent/WEB-INF/web.xml
+++ b/GraduationDesignSystem/WebContent/WEB-INF/web.xml
@@ -20,7 +20,7 @@
 	</listener>
 
 	<welcome-file-list>
-		<welcome-file>login.html</welcome-file>
+		<welcome-file>login.jsp</welcome-file>
 	</welcome-file-list>
 
 </web-app>
