管理员登录页面修改

--- a/GraduationDesignSystem/.settings/org.eclipse.core.resources.prefs
+++ b/GraduationDesignSystem/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,8 @@
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=refs/remotes/origin/master
 eclipse.preferences.version=1
+encoding//WebContent/static/css/main/index.css=UTF-8
 encoding//test/HibernateDaoImpTest/StudentDaoImpTest.java=UTF-8
 encoding//test/ServiceImpTest/StudentManagetImpTest.java=UTF-8
-<<<<<<< HEAD
-=======
 encoding/<project>=UTF-8
->>>>>>> refs/remotes/origin/master
